--- a/patient-registry.html
+++ b/patient-registry.html
@@ -204,7 +204,7 @@
             <section class="form-section" aria-labelledby="sec-odonto">
               <h3 id="sec-odonto">Odontodiagrama</h3>
               <div class="odontogram-wrapper"> 
-                <img src="/img/Odontodiagrama.png" alt="Odontodiagrama placeholder" class="odontodiagrama-img">
+                <img src="./img/Odontodiagrama.png" alt="Odontodiagrama placeholder" class="odontodiagrama-img">
               </div>
             </section>
           
